--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,5 +6,5 @@
 .main {
   background-color: var(--primary-color-light);
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 3fr 1fr;
 }
